--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ os:
   - linux
   - osx
 go:
-  - "1.10.1"
+  - "1.11.4"
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install bash; fi
@@ -13,9 +13,8 @@ before_install:
   - go get github.com/docopt/docopts
 branches:
   only:
-    - docopts-go
     - master
-    - rdonkin-feat-bash-3.2-support
+    - json-api
 notifications:
   email:
     on_success: never
